<resources>
    <string name="app_name">PickEm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hamburger_people">People</string>
    <string name="hamburger_settings">Settings</string>
    <string name="hamburger_home">Home</string>
    <string name="hamburger_leagues">Leagues</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_people">People</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_leagues">Leagues</string>

    <string name="title_activity_login">PickEm</string>

    <string name="email_editText_login">Enter Email Address</string>
    <string name="username_editText_login">Enter Username</string>
    <string name="password_editText_login">Enter Password</string>
    <string name="button_submit">Create Account</string>
    <string name="button_deleteAccount">Delete account</string>
    <string name="button_myProfile">My Profile</string>
    <string name="register_header">Register or Login</string>
    <string name="button_logIn">Log in</string>
    <string name="button_logOut">Log out</string>

    <string name="yourLeagues_activity_leagues">Your Leagues</string>

    <string name="title_activity_league_options">Manage League</string>
    <string name="button_cancel">Cancel</string>
    <string name="add_game">Add Game</string>
    <string name="rename_league">Rename League</string>
    <string name="delete_league">Delete League</string>
    <string name="delete">Delete</string>
    <string name="create_league">Create League</string>
    <string name="join_league">Join League</string>

    <string name="title_activity_game_options">GameOptionsActivity</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="button_changePicture">Change Picture</string>
    <string name="button_changeUsername">Change Username</string>
    <string name="changePicture_take">Take Picture</string>
    <string name="removePicture">Remove Picture</string>
    <string name="changePicture_avatar">Choose Avatar</string>

    <string name="yourOwnedLeagues">Leagues you own:</string>
    <string name="button_removeLeague">Remove from League:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
